# aro

./: .gitignore  OPERATING.md  README.md  find_hotpath.py  pyproject.toml  ralph.sh  selftest.py  verify_patch.py
aro/: __init__.py  __main__.py  ablate.py  attempt.py  certify.py  chart.py  clean.py  cli.py  context.py  coverage.py  critic.py  decision_tree_template.html  engine.py  eval.py  events.py  frontier.py  generator.py  guard.py  icount.py  init.py  ledger_template.html  lessons.py  llm.py  manifest.py  next.py  patchfile.py  permtree.py  pipeline.py  plan.py  probe_factory.py  profile.py  prompts.py  recheck.py  recheck_debts.py  report_md.py  reverify.py  runlog.py  selfcheck.py  serve.py  ship.py  (+15 more)
docs/: ONBOARDING.md  OPERATIONS.md  a6ee3a9b-algebra-pr-draft-20260722.md  a6ee3a9b-backport-certify-20260721.md  a6ee3a9b-conformance-thread-gate-20260722.md  a6ee3a9b-pr-ready-evidence-20260722.md  a6ee3a9b-salt-livelock-investigation-20260722.md  a6ee3a9b-salt-pin-bump-20260722.md  algebra-adx-bmi2-comparison-20260721.md  algebra-adx-bmi2-salt-counterbalanced-20260721.md  algebra-bandersnatch-campaign-20260721.md  algebra-bandersnatch-epsilon-20260721.md  algebra-certify-probe-install-20260721.md  algebra-fourth-target-recon-20260721.md  algebra-upstream-cherry-pick-evaluation-20260721.md  explore-demo.html  explore-mode-design.md  infinite-flow-design.md  mega-evm-ckpt-overshoot-distribution-20260724.md  mega-evm-ckpt-v1_5-backedge-20260724.md  mega-evm-hwcounters-cycle-ir-divergence-20260724.md  mega-evm-limit-editable-triple-gate-20260724.md  refactor-plan.md  (+22 more)
(+872 files in other folders)
